--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+html{
+  scroll-behavior: smooth;
+}
 .App {
   text-align: center;
   font-family: 'Poppins', sans-serif;
