--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,10 +1,20 @@
 .google-signin{
-    background-color: orange;
+    background-color: rgb(180, 130, 38);
     color: white;
     cursor: pointer;
     transition: background-color .7s;
 }
 .google-signin:hover{
+    background-color: cadetblue;
+    color: white;
+}
+.fb-signin{
+    background-color: rgb(53, 53, 155);
+    color: white;
+    cursor: pointer;
+    transition: background-color .7s;
+}
+.fb-signin:hover{
     background-color: cadetblue;
     color: white;
 }
